--- a/haskellOEIS.cabal
+++ b/haskellOEIS.cabal
@@ -20,6 +20,6 @@ executable haskellOEIS
   main-is:
     Main.hs
   ghc-options:
-  build-depends:       base >=4.8 && <4.9, matrix >=0.3 && <0.4, vector >=0.11 && <0.12
+  build-depends:       base >=4.8 && <4.9
   hs-source-dirs:      src
   default-language:    Haskell2010
