--- a/haskellOEIS.cabal
+++ b/haskellOEIS.cabal
@@ -20,6 +20,6 @@ executable haskellOEIS
   main-is:
     Main.hs
   ghc-options:
-  build-depends:       base >=4.8 && <4.9, containers, hspec
+  build-depends:       base >=4.8 && <4.9, containers, hspec, matrix, vector
   hs-source-dirs:      src
   default-language:    Haskell2010
