--- a/haskellOEIS.cabal
+++ b/haskellOEIS.cabal
@@ -17,9 +17,15 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 executable haskellOEIS
-  main-is:
-    Main.hs
+  main-is:             Main.hs
   ghc-options:
   build-depends:       base >=4.8 && <4.9, containers, hspec, matrix, vector
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite spec
+  build-depends:       base >=4.8 && <4.9, containers, hspec, matrix, vector
+  hs-source-dirs:      src, test
+  main-is:             Spec.hs
+  default-language:    Haskell2010
+  Type:                exitcode-stdio-1.0
