--- a/stack.yaml
+++ b/stack.yaml
@@ -37,9 +37,13 @@ resolver: nightly-2018-05-06
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - '.'
+
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- arithmoi-0.9.0.0
+- exact-pi-0.5.0.1
+- semirings-0.5.1
 
 # Override default flag values for local packages and extra-deps
 flags: {}
