--- a/stack.yaml
+++ b/stack.yaml
@@ -44,6 +44,8 @@ extra-deps:
 - arithmoi-0.9.0.0
 - exact-pi-0.5.0.1
 - semirings-0.5.1
+- data-memocombinators-0.5.1
+- data-inttrie-0.1.4
 
 # Override default flag values for local packages and extra-deps
 flags: {}
